# SpendFlow

./: .env  .env.example  .gitignore  CORRECTIONS_SUMMARY.md  Dockerfile  FINAL_SUMMARY.md  LICENSE  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  starter.md
alembic/: env.py
alembic/versions/: 2fa86e5c60d8_initial_migration.py  35cd94722e4c_initial_migration.py  4f5d2f7c9b31_add_transactions_and_categories.py  822a442fa8b5_change_numeric_columns_to_decimal.py  9c6f5d7b8a12_add_interval_to_recurring_rules.py  a7b2c1d4e5f6_add_deleted_at_to_recurring_rules.py  b1c2d3e4f5a6_v1_ledger_budgets_and_constraints.py  c3d4e5f6a7b8_add_budget_period_uniqueness_indexes.py  d62f86d08d40_add_missing_user_columns.py  e4f7a1b2c3d4_add_user_ui_preferences.py
docs/: ARCHITECTURE.md  DATABASE_MIGRATIONS.md  VIRTUAL_ENGINE.md
scripts/: bootstrap_user_demo.py
src/: database.py  main.py  seed.py
src/api/: router.py
src/api/v1/: __init__.py  account.py  accounts.py  auth.py  budget.py  calendar.py  category.py  deps.py  transaction.py
src/api/v1/calendar/: __init__.py  projection.py  rule.py
src/core/: __init__.py  config.py  cors.py  exceptions.py  lifespan.py  logging_config.py  middleware.py  security.py
src/models/: __init__.py  account.py  budget.py  calendar.py  category.py  category_group.py  enums.py  finance.py  transaction.py  user.py
src/repositories/: __init__.py  budget_repo.py  category_repo.py  recurring_rule_repo.py  transaction_repo.py  user_repo.py
src/schemas/: __init__.py  account.py  budget.py  category.py  finance.py  preferences.py  recurring.py  transaction.py  user.py
src/services/: __init__.py  account.py  auth.py  budget.py  calendar.py  calendar_service.py  category.py  recurring_rule.py  transaction.py
tests/: README.md  conftest.py  test_api.py  test_auth.py  test_budgets.py  test_calendar.py  test_categories.py  test_debug.py  test_debug_auth.py  test_debug_create_list.py  test_edge_cases.py  test_finance.py  test_recurring_rules.py  test_schemas.py  test_services.py  test_transactions.py
web/: middleware.ts  package-lock.json  package.json
web/app/: auth-actions.ts  error.tsx  finance-actions.ts  globals.css  layout.tsx  loading.tsx
web/app/accounts/: page.tsx
web/app/api/session/: route.ts
web/app/api/user-preferences/: route.ts
web/app/budget/: page.tsx
web/app/calendar/: page.tsx
web/app/login/: page.tsx
web/app/logout/: route.ts
web/app/recurring/: page.tsx
web/app/register/: page.tsx
web/app/savings/: page.tsx
web/app/transactions/: page.tsx
web/components/: accounts-content.tsx  app-shell-server.tsx  app-shell.tsx  auth-form.tsx  budget-content.tsx  calendar-content.tsx  calendar-workspace.tsx  dashboard-content.tsx  dashboard-shell.tsx  feature-empty-state.tsx  feature-placeholder.tsx  finance-forms.tsx  recurring-content.tsx  savings-content.tsx  transactions-content.tsx  transactions-workbench.tsx
